@@ -208,7 +208,6 @@ if (UNIX)
 endif ()
 
 if (WIN32)
-  install(FILES "${PROJECT_SOURCE_DIR}/UNLICENSE.txt" DESTINATION "${INSTALL_DIR_BIN}")
   install(FILES "${PROJECT_SOURCE_DIR}/CHANGELOG.txt" DESTINATION "${INSTALL_DIR_BIN}")
 endif ()
 
